--- a/flask/req-eval/requirements.txt
+++ b/flask/req-eval/requirements.txt
@@ -1,5 +1,5 @@
-flask==3.0.0
-boto3==1.34.11
-werkzeug==3.0.1
+flask>=3.1.0
+boto3>=1.34.11
+werkzeug>=3.0.1
 botocore>=1.31.85
-markitdown==0.1.0
+markitdown
